pages has been replaced

--- a/src/features/pages/chat/chat.pug
+++ b/src/features/pages/chat/chat.pug
@@ -1,7 +1,7 @@
-include ../../components/header/header.pug
-include ../../components/chatList/chatList.pug
-include ../../components/ui/input/input.pug
-include ../../components/ui/button/button.pug
+include ../../../components/header/header.pug
+include ../../../components/chatList/chatList.pug
+include ../../../components/ui/input/input.pug
+include ../../../components/ui/button/button.pug
 
 .chat-page.flex
     header.header.flex
