--- a/src/features/pages/error/error.pug
+++ b/src/features/pages/error/error.pug
@@ -1,4 +1,4 @@
-include ../../components/header/header.pug
+include ../../../components/header/header.pug
 
 .error.flex
     button.btn-reset.error-back-button
