--- a/src/features/pages/reg/reg.pug
+++ b/src/features/pages/reg/reg.pug
@@ -1,6 +1,6 @@
-include ../../components/ui/loginReg/top.pug
-include ../../components/ui/loginReg/bottom.pug
-include ../../components/ui/loginReg/input.pug
+include ../../../components/ui/loginReg/top.pug
+include ../../../components/ui/loginReg/bottom.pug
+include ../../../components/ui/loginReg/input.pug
 
 .reg.flex
     +loginRegTop('reg')
