--- a/src/features/chat/view/chat.pug
+++ b/src/features/chat/view/chat.pug
@@ -1,7 +1,7 @@
-include ../../../components/header/header.pug
-include ../../../components/chatList/chatList.pug
-include ../../../components/ui/input/input.pug
-include ../../../components/ui/button/button.pug
+include ./header/header.pug
+include ./chatList/chatList.pug
+include ./ui/input/input.pug
+include ./ui/button/button.pug
 
 .chat-page.flex
     header.header.flex
