--- a/src/features/reg/view/reg.pug
+++ b/src/features/reg/view/reg.pug
@@ -1,6 +1,6 @@
-include ../../../components/ui/loginReg/top.pug
-include ../../../components/ui/loginReg/bottom.pug
-include ../../../components/ui/loginReg/input.pug
+include ./loginReg/top.pug
+include ./loginReg/bottom.pug
+include ./loginReg/input.pug
 
 .reg.flex
     +loginRegTop('reg')
