--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,8 +1,13 @@
 .contact {
-  height: 80px;
+  height: 70px;
   width: 286px;
   display: flex;
+  cursor: pointer;
   background-color: #1C1C24;
+}
+
+.contact:hover {
+  background-color: #282833;
 }
 
 .contact-avatar {
