--- a/src/components/create_group/create_group.scss
+++ b/src/components/create_group/create_group.scss
@@ -1,6 +1,6 @@
 .create-group {
-  width: 1436px;
-  height: 1154px;
+  width: 100%;
+  height: 100%;
   background-color: #131318;
   display: flex;
   justify-content: center;
@@ -8,24 +8,38 @@
 }
 
 .create-group__header {
+  height: 20%;
+  width: 35%;
   margin-right: auto;
   margin-left: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.create-group__input {
+  padding-top: 7%;
+  padding-bottom: 7%;
 }
 
 .create-group__contacts {
-  margin-left: auto;
+  height: 100%;
+  width: 17.5%;
 }
 
 .contacts {
   background: #1C1C24;
-  position: relative;
-  height: 1000px;
-  width: 286px;
+  height: 100%;
+  width: 100%;
 }
 
 .contacts__head {
-  padding-top: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  padding-top: 15px;
 }
 
 .contacts__contacts {
@@ -35,14 +49,11 @@
 }
 
 .contacts__add-contact {
-  text-align: center;
-  width: 286px;
-  height: 85px;
-  background: #1C1C24;
+  display: flex;
 }
 
 .contacts__separator {
-  width: 286px;
+  width: 100%;
   border: 1px solid #4A4E50;
   background: #1C1C24;
 }
