--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ main {
 
     /* display: grid;
     grid-template-columns: [sidebar-start] 104px [sidebar-end static-start] 380px [static-end dynamic-start] auto [dynamic-end]; */
-    
+
     background-color: #131318;
 }
 
@@ -208,6 +208,19 @@ main {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
+    line-height: 29px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+.font-size-9 {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
     line-height: 29px;
     /* identical to box height */
 
