another version of profile-form

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -3,6 +3,11 @@
   border-radius: 10px;
 }
 
+.profile-popup {
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+}
+
 .popup {
     position: fixed;
     top: 50%;
