--- a/src/uikit/form/form.scss
+++ b/src/uikit/form/form.scss
@@ -9,5 +9,8 @@
     width: 50%;
     height: 50%;
     padding: 20px;
-    padding-top: 5%;
+    padding-top: 20%;
+    max-height: 500px;
+    overflow: auto;
+    margin-bottom: 5%;
 }
