--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -35,6 +35,9 @@
 
 .profile__avatar {
     padding-top: 10px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
     &-border-radius {
         &-50 {
             border-radius: 50%;
