try to subscribe profile avatar on changes

--- a/src/uikit/input/input.pug
+++ b/src/uikit/input/input.pug
@@ -1,7 +1,7 @@
 div(class=ClassName)
     span(class=LabelClassName).input-container__label
         !=Label
-    input(class=UniqClassName)(type=Type, placeholder=Placeholder)
+    input(class=UniqClassName)(type=Type, placeholder=Placeholder, value=Value)
     !=Caption
     if Errors
         .input__errors.flex
