--- a/src/uikit/input/input.scss
+++ b/src/uikit/input/input.scss
@@ -76,7 +76,7 @@ input {
 }
 
 .login-reg__input_error {
-  filter: drop-shadow(0px 4px 20px #4d89d1);
+  border-radius: 2px solid red;
 }
 
 .profile__form__input {
