popup has been fixed, validation in progress

--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -85,6 +85,7 @@
         text-align: center;
         color: #FFFFFF;
         padding: 10px;
+        padding-bottom: 0px;
         align-items: center;
         justify-content: center;
         
