--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -30,7 +30,7 @@
   
     &__content {
       width: 60%;
-      height: 30%;
+      // height: 30%;
       max-width: 600px;
       border-radius: 10px;
       background-color: #181B23;
