--- a/src/uikit/button/button.scss
+++ b/src/uikit/button/button.scss
@@ -1,6 +1,8 @@
+#active-btn {
+    background-color: var(--primary);
+}
+
 .button {
-    // min-width: 50%;
-    // min-height: 5%;
     font-size: 1.2rem;
     margin-bottom: 5%;
     padding: 8px 15px;
@@ -18,6 +20,10 @@
     }
 
     &:focus {
+        background-color: var(--primary);
+    }
+
+    &:active {
         background-color: var(--primary);
     }
 
