--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -29,14 +29,14 @@
         margin-bottom: 10px;
     }
 
-    &--sticker {
-        .message__content {
-            background-color: inherit;
-        }
-    }
+    // &--sticker {
+    //     .message__content {
+    //         background-color: inherit;
+    //     }
+    // }
 
     &__content {
-        max-width: 60%;
+        max-width: 350px;
         flex-direction: column;
         justify-content: end;
         padding: 10px;
