--- a/src/components/message/message.pug
+++ b/src/components/message/message.pug
@@ -4,7 +4,7 @@
     .message__content.flex
         if (nickname != '')
             span.message__nickname= nickname
-        if (image != '')
+        if (image)
             .message__image
         if (body != '')
             .message__body= body
