Added all file types

--- a/src/uikit/file/file.pug
+++ b/src/uikit/file/file.pug
@@ -1,1 +1,1 @@
-a(href=Src class=ClassName, style=style, download).file=Src
+a(href=Src class=ClassName, style=style, download=Download).file=Download 
