--- a/src/components/attachment/attachment.scss
+++ b/src/components/attachment/attachment.scss
@@ -2,5 +2,6 @@
     flex-direction: column;
     align-items: center;
     padding: 18px 18px 18px 18px; 
-    width: 100%;
+    position: relative;
+    width: fit-content;
 }
