--- a/src/components/message-input/message-input.scss
+++ b/src/components/message-input/message-input.scss
@@ -9,10 +9,14 @@
 
     &__attachment {
         display: none;
+        width: 100%;
         padding: 18px 18px 18px 18px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
 
         &--show {
-            display: block; 
+            display: flex; 
         }
     }
 
