--- a/src/uikit/button/button.pug
+++ b/src/uikit/button/button.pug
@@ -1,2 +1,2 @@
-button.btn-reset.button(class=className, type=type, style=style)= label
+button.btn-reset.button(class=className, style=style)!= label
     !=icon
