Added animation for attachments

--- a/src/components/chat/chat.pug
+++ b/src/components/chat/chat.pug
@@ -18,6 +18,6 @@ main.main.flex
             //-     !=Input
         if SubsribeBtnText
             button.btn-reset.subscribe-btn.flex!=SubsribeBtnText
-    section.attachments.flex
+    section.attachments.attachments--disabled.flex
         .attachments__heder.flex
             span= 'Вложения'
