--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -1,10 +1,13 @@
 .attachments {
     flex-direction: column;
     width: 25%;
-    min-width: 300px;
     background: #181B23;
 
+    // margin-right: 0%;
+    transition: width 0.3s;
+
     &__heder {
+        overflow: hidden;
         justify-content: center;
         align-items: center;
         height: 115px;
@@ -14,9 +17,12 @@
         font-size: 24px;
         line-height: 30px;
 
-        font-feature-settings: 'pnum' on, 'lnum' on;
-
         color: #FFFFFF;
+    }
+
+    &--disabled {
+        width: 0;
+        transition: width 0.3s;
     }
 }
 
@@ -40,6 +46,7 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .view-chat__messages {
