--- a/src/components/attachment/attachment.scss
+++ b/src/components/attachment/attachment.scss
@@ -1,7 +1,7 @@
 .attachment {
     flex-direction: column;
     align-items: center;
-    padding: 18px 18px 18px 18px; 
+    padding: 18px; 
     position: relative;
     width: fit-content;
 }
