--- a/src/components/message-input/message-input.pug
+++ b/src/components/message-input/message-input.pug
@@ -1,9 +1,9 @@
 .message-input.flex(class=className)
-    .message-input__attachment
+    .message-input__attachment.message-input__attachment--disabled.flex
     .message-input__text-field
         input.message-input__text-field__in(type="text" placeholder="Сообщение")
         for i in icons 
             !=i
-    .message-input__emoji-stickers.flex
+    .message-input__emoji-stickers.message-input__emoji-stickers--disabled.flex
         .message-input__emoji.flex
         .message-input__stickers.flex
