profile header in progress

--- a/src/components/ui/icon/button.scss
+++ b/src/components/ui/icon/button.scss
@@ -29,7 +29,42 @@
 
 .icon {
     fill: #ffffff;
-    // position: absolute;
-    // right: 5%;
-    // bottom: 15%;
+}
+
+.back-btn {
+    margin-right: 20px;
+    fill: #ffffff;
+    transition: fill 0.3s ease-in-out;
+}
+
+.back-btn:hover {
+    fill: #0782C7;
+}
+
+.back-btn:hover:active {
+    fill: #095581;
+}
+
+.back-btn:hover:focus {
+    fill: #166490;
+}
+
+.back-btn__text {
+    font-family: 'Actor';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #FFFFFF;
+    margin-right: 50%;
+}
+
+.back-btn__container {
+    align-items: center;
+    justify-content: space-between;
+    max-width: 50%;
+    padding: 0px 10px;
 }
