--- a/src/components/contacts/contacts.scss
+++ b/src/components/contacts/contacts.scss
@@ -11,8 +11,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 0px 20px;
-  min-height: 8%;
+  min-height: 100px;
   min-width: 100%;
+  background-color: #181B23;
 }
 
 .contacts__contacts {
