--- a/src/components/new-sidebar/sidebar.scss
+++ b/src/components/new-sidebar/sidebar.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: 104px;
-    background-color: #1E1E1E;
+    background-color: #131318;
     box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
     padding: 16px 27px 0px 27px;
     height: 100vh;
