--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -48,11 +48,8 @@
         background-color: #f0f0f0;
   
         &__title {
-          margin: 0;
-          // font-size: 20px;
-          // font-weight: 500;
-          // color: #ffffff;
-          margin-bottom: 10%;
+          margin: 0px;
+          margin-bottom: 20px;
           font-family: 'Actor';
           font-style: normal;
           font-weight: 400;
