--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -80,9 +80,8 @@
   
 .popup__title {
   margin: 0;
-  // font-size: 20px;
   color: #ffffff;
-  margin-bottom: 10%;
+  margin-bottom: 20px;
   z-index: 1;
   font-family: 'Actor';
   font-style: normal;
