--- a/src/components/message-input/message-input.scss
+++ b/src/components/message-input/message-input.scss
@@ -33,10 +33,12 @@
         min-height: 60px;
 
         &__in {
-            margin: 0px;
+            overflow: hidden;
+            word-break: break-word;
             min-height: 60px;
             min-width: 100%;
-            max-height: 500px;
+            max-height: 25vh;
+            max-width: 100%;
             outline: none;
             background: #1C1C24;
             border: 1px solid #1B262C;
@@ -44,10 +46,10 @@
             font-family: 'SF Pro Display';
             font-style: normal;
             font-weight: 400;
-            font-size: 14px;
+            font-size: 16px;
             line-height: 17px;
             color: #78777C;
-            padding: 18px 100px 18px 50px;
+            padding: 22px 100px 18px 50px;
 
             &:focus {
                 color: #ffffff;    
@@ -86,20 +88,17 @@
 .view-chat__send-message-button {
     position: absolute;
     right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+    bottom: 15px;
 }
 
 .view-chat__add-attachment-button {
     position: absolute;
     right: 70px;
-    top: 50%;
-    transform: translateY(-50%);
+    bottom: 18px;
 }
 
 .view-chat__add-emoji-sticker {
     position: absolute;
     left: 15px;
-    top: 50%;
-    transform: translateY(-50%);
+    bottom: 15px;
 }
