--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -25,7 +25,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.3);
     }
   
     &__content {
@@ -34,11 +34,12 @@
       max-width: 600px;
       border-radius: 10px;
       background-color: #181B23;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      // box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 20px;
+      border-radius: 10px;
   
       &__header {
         display: flex;
