--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -54,7 +54,7 @@
 
         max-width: 100%;
         word-wrap: break-word;
-        word-break: normal;
-        white-space: normal;
+        word-break: break-word;
+        white-space: break-spaces;
     }
 }
