--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -51,12 +51,17 @@
             align-items: flex-start;
             justify-content: flex-start;
             min-width: 100%;
+            &__errors {
+                top: 105%;
+                font-size: 1.2rem;
+            }
         }
 
         &__list {
             justify-content: space-between;
             align-items: center;
             min-width: 100%;
+            padding-top: 20px;
         }
 
         &__btn {
