--- a/src/components/new-profile/profile.scss
+++ b/src/components/new-profile/profile.scss
@@ -2,9 +2,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    transition: all 2s ease-out;
     min-height: 100vh;
 }
 
 .profile__avatar__container {
     max-width: 200px;
 }
+  
