--- a/src/uikit/input/input.scss
+++ b/src/uikit/input/input.scss
@@ -108,3 +108,11 @@ input {
 .profile__form__input:not(:last-child) {
   margin-bottom: 5%;
 }
+
+.channel-members {
+  position: relative;
+}
+
+.channel__form__input-members {
+  position: relative;
+}
