--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -1,8 +1,33 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+}  
+
 .channel {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     min-height: 100vh;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-delay: 0.5s;
+
     &__header {
         min-height: 80px;
         align-items: center;
@@ -82,3 +107,4 @@
         }
     }
 }
+  
