--- a/src/components/new-profile/profile.scss
+++ b/src/components/new-profile/profile.scss
@@ -4,6 +4,9 @@
     justify-content: flex-start;
     transition: all 2s ease-out;
     min-height: 100vh;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-delay: 0.5s;
 }
 
 .profile__avatar__container {
