--- a/src/index.scss
+++ b/src/index.scss
@@ -305,6 +305,9 @@ button {
 
 main {
     width: 100%;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-delay: 0.5s;
 }
 
 .main {
@@ -320,6 +323,28 @@ main {
     background-color: #131318;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+}
+  
+
 #sidebar {
     
 }
@@ -331,8 +356,10 @@ main {
 }
 
 #dynamic {
-    // flex-grow: 1;
     background-color: #131318;
+    // opacity: 0;
+    // animation: fadeIn 1s ease-in-out forwards;
+    // animation-delay: 0.5s;
 }
 
 .flex-grow-1 {
