--- a/src/uikit/input/input.pug
+++ b/src/uikit/input/input.pug
@@ -2,6 +2,7 @@ div(class=ClassName)
     span(class=LabelClassName).input-container__label
         !=Label
     input(class=UniqClassName)(type=Type, placeholder=Placeholder, value=Value)
+    !=Icon
     !=Caption
     if Errors
         div(class=ErrorsClassName).input__errors.flex
