channel update component - done

--- a/src/components/chat/chat.pug
+++ b/src/components/chat/chat.pug
@@ -16,7 +16,7 @@ main.main.flex
         .view-chat__message-input
             //- if Input
             //-     !=Input
-        if SubsribeBtnText
+        if SubsribeBtnText && !EditBtn
             button.btn-reset.subscribe-btn.flex!=SubsribeBtnText
     section.attachments.attachments--disabled.flex
         .attachments__heder.flex
