--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -85,6 +85,10 @@
             }
         }
 
+        &__input:not(:last-child) {
+            margin-bottom: 50px;
+        }
+        
         &__list {
             justify-content: space-between;
             align-items: center;
