--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -39,7 +39,7 @@
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        margin-bottom: 230px;
+        margin-bottom: 150px;
 
         &__back-btn {
             margin: 0px;
@@ -76,10 +76,15 @@
             align-items: flex-start;
             justify-content: flex-start;
             min-width: 100%;
+            margin-bottom: 0px;
             &__errors {
                 top: 105%;
                 font-size: 1.2rem;
             }
+        }
+
+        &__input:not(:last-child) {
+            margin-bottom: 50px;
         }
 
         &__list {
