--- a/src/uikit/input/input.pug
+++ b/src/uikit/input/input.pug
@@ -9,3 +9,5 @@ div(class=ClassName)
             each error in Errors
                 span(class=error.class).login-reg__error.invisible
                     !=error.message
+    if Contacts 
+        ul.flex
