--- a/src/components/ui/chatAvatar/chatAvatar.scss
+++ b/src/components/ui/chatAvatar/chatAvatar.scss
@@ -1,7 +1,10 @@
 .header__avatar {
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-between;
+    min-height: 100%;
+    padding-left: 15px;
+    padding-top: 10px;
 }
 
 .header__avatar__username {
@@ -11,8 +14,7 @@
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF;
-    margin-bottom: 5px;
-    padding-left: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -20,7 +22,7 @@
     font-family: 'SF Pro Display';
     font-style: normal;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 14px;
     line-height: 12px;
     color: #CDCDCD;
 }
