input dropdown rendering

--- a/src/index.scss
+++ b/src/index.scss
@@ -274,6 +274,10 @@ button {
     flex-direction: column;
 }
 
+.opacity {
+    opacity: 1;
+}
+
 .center {
     align-items: center;
     justify-content: center;
