--- a/src/uikit/input/input.scss
+++ b/src/uikit/input/input.scss
@@ -117,8 +117,8 @@ input {
   position: relative;
 }
 
-.channel__form__input-members:focus {
-  opacity: 1;
-  height: 200px !important;
-  max-height: 200px !important;
-}
+// .channel__form__input-members:focus + .input-dropdown__list{
+//   opacity: 1;
+//   height: 200px !important;
+//   max-height: 200px !important;
+// }
