--- a/src/uikit/inputdropdown/inputdropdown.scss
+++ b/src/uikit/inputdropdown/inputdropdown.scss
@@ -2,11 +2,15 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 360px;
-    // height: 0px;
-    // height: 200px;
+    width: 100%;
+    min-height: 200px;
+    max-height: 250px;
+    background: #181B23;
     opacity: 0;
-    max-height: 0px;
     overflow: hidden; // overflow: auto;
     transition: all 0.3s ease;
+}
+
+.grow {
+    height: 50%;
 }
