--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -17,9 +17,9 @@
     100% {
       transform: scale(1);
     }
-}  
+}
 
-.channel {
+.group {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
@@ -39,26 +39,27 @@
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        margin-bottom: 230px;
+        margin-bottom: 50px;
+    }
 
-        &__back-btn {
-            margin: 0px;
-            align-self: center;
-            justify-content: center;
-            font-family: "Actor";
-            font-style: normal;
-            letter-spacing: 0.08rem;
-            font-weight: 400;
-            font-size: 22px;
-            line-height: 30px;
-            background: none;
-            color: #ffffff;
-            transition: color 0.3s ease-in-out;
-        }
+    &__back-btn {
+        margin: 0px;
+        align-self: center;
+        justify-content: center;
+        font-family: "Actor";
+        font-style: normal;
+        letter-spacing: 0.08rem;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 30px;
+        background: none;
+        color: #ffffff;
+        transition: color 0.3s ease-in-out;
     }
 
     &__avatar {
-        margin-bottom: 20px;
+        padding: 0px;
+        margin-bottom: 50px;
         &__container{
             max-width: 200px;
         }
@@ -67,8 +68,8 @@
     &__form {
         width: 50%;
         height: 50%;
-        padding: 20px;
-        max-height: 500px;
+        padding: 0px 20px;
+        max-height: 600px;
         max-width: 460px;
 
         &__input {
@@ -76,9 +77,6 @@
             align-items: flex-start;
             justify-content: flex-start;
             min-width: 100%;
-            // &-members {
-            //     position: relative;
-            // }
             &__errors {
                 top: 105%;
                 font-size: 1.2rem;
