try to render input-dropdow-item

--- a/src/uikit/input-dropdown-item/dropdown-item.pug
+++ b/src/uikit/input-dropdown-item/dropdown-item.pug
@@ -1,1 +1,4 @@
 div(class=ClassName).input-dropdown__list__item.flex
+    img(src=ImgSrc, class=ImgClassName).dropdown-item__image
+    span.dropdown-item__text
+        !=Nickname
