--- a/src/uikit/input-dropdown-item/dropdown-item.scss
+++ b/src/uikit/input-dropdown-item/dropdown-item.scss
@@ -1,24 +1,34 @@
 .input-dropdown__list__item {
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
     min-width: 100%;
     max-height: 50px;
-    background-color: red; // #181B23
-    padding: 10px;
+    background-color: #131318; // #181B23
+    padding: 10px 0px;
     cursor: pointer;
     z-index: 1;
+    transition: background-color 0.3s ease-in-out;
+    &:hover {
+        background-color: #112235;
+    }
+    &:active {
+        background-color: #112235;
+    }
+    &:focus {
+        background-color: #112235;
+    }
 }
 
-// .input-dropdown__list__item:not(:last-child) {
-//     margin-right: 12px;
-// }
-
 .dropdown-item__image {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background: #112235;
     z-index: 999;
+}
+
+.dropdown-item__image:not(:last-child) {
+    margin-right: 10px;
 }
 
 .dropdown-item__text {
