--- a/src/uikit/inputdropdown/inputdropdown.scss
+++ b/src/uikit/inputdropdown/inputdropdown.scss
@@ -9,7 +9,7 @@
     padding: 10px 0px;
     opacity: 1;
     z-index: 1;
-    overflow: auto; // overflow: hidden;
+    overflow-y: auto; // overflow: hidden;
     transition: all 0.3s ease;
 }
 
