simple gretting info - done

--- a/src/components/about-us/about-us.pug
+++ b/src/components/about-us/about-us.pug
@@ -1,14 +1,29 @@
 <div class="about-us container flex col">
     <div class="about-us__logo flex">
         <figure class="row flex">
-        <img class="about-us__logo__image" src="./assets/img/logo.png" alt="Logo">
-        <figcaption class="about-us__logo__text">Technogramm</figcaption>
+            <img class="about-us__logo__image" src="./assets/img/logo.png" alt="Logo">
+            <figcaption class="about-us__logo__text">Technogramm</figcaption>
         </figure>
     </div>
     <h2 class="about-us__slogan">Наслаждайтесь общением.</h2>
-    <div class="list flex about-us__list flex col">
-        <span class="about-us__list__item">Обмен текстовыми сообщениями, фото и стикерами.</span>
-        <span class="about-us__list__item">Создание канала для публикации контента.</span>
-        <span class="about-us__list__item">Создание групповых чатов для общения с друзьями.</span>
+    <ul class="list flex about-us__list flex col">
+        <li class="flex about-us__list__item">
+            <svg class="about-us__list__item__svg" width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+            <path d="M22 11L19.56 8.21L19.9 4.52L16.29 3.7L14.4 0.5L11 1.96L7.6 0.5L5.71 3.69L2.1 4.5L2.44 8.2L0 11L2.44 13.79L2.1 17.49L5.71 18.31L7.6 21.5L11 20.03L14.4 21.49L16.29 18.3L19.9 17.48L19.56 13.79L22 11ZM9.09 15.72L5.29 11.91L6.77 10.43L9.09 12.76L14.94 6.89L16.42 8.37L9.09 15.72Z" fill="white"/>
+            </svg>
+            <span class="about-us__list__item__text">Обмен текстовыми сообщениями, фото и стикерами.</span>
+        </li>
+        <li class="flex about-us__list__item">
+            <svg class="about-us__list__item__svg" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path d="M17.07 2.93L15.66 4.34C17.1 5.79 18 7.79 18 10C18 14.42 14.42 18 10 18C5.58 18 2 14.42 2 10C2 5.92 5.05 2.56 9 2.07V4.09C6.16 4.57 4 7.03 4 10C4 13.31 6.69 16 10 16C13.31 16 16 13.31 16 10C16 8.34 15.33 6.84 14.24 5.76L12.83 7.17C13.55 7.9 14 8.9 14 10C14 12.21 12.21 14 10 14C7.79 14 6 12.21 6 10C6 8.14 7.28 6.59 9 6.14V8.28C8.4 8.63 8 9.26 8 10C8 11.1 8.9 12 10 12C11.1 12 12 11.1 12 10C12 9.26 11.6 8.62 11 8.28V0H10C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 7.24 18.88 4.74 17.07 2.93Z" fill="white"/>
+            </svg>
+            <span class="about-us__list__item__text">Создание канала для публикации контента.</span>
+        </li>
+        <li class="flex row about-us__list__item">
+            <svg class="about-us__list__item__svg" width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8.99 17.0048L1.62 11.2748L0 12.5348L9 19.5348L18 12.5348L16.37 11.2648L8.99 17.0048ZM9 14.4648L16.36 8.73484L18 7.46484L9 0.464844L0 7.46484L1.63 8.73484L9 14.4648Z" fill="white"/>
+            </svg>
+            <span class="about-us__list__item__text">Создание групповых чатов для общения с друзьями.</span>
+        </li>
     </div>
 </div>
