--- a/src/components/signUp/signUp.scss
+++ b/src/components/signUp/signUp.scss
@@ -5,90 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.about-us {
-    align-items: flex-start;
-    
-    margin: 0px;
-    width: 50%;
-    background: var(--primary);
-    opacity: 0.7;
-    position: relative;
-    padding: 20px;
-    &::after {
-        content: '';
-        border-radius: 50%;
-        position: absolute;
-        width: 590.64px;
-        height: 590.64px;
-        left: 525px;
-        top: -97px;
-        background: linear-gradient(173.9deg, rgba(164, 188, 253, 0.2) 39.65%, rgba(68, 76, 231, 0.162) 125.94%), radial-gradient(50% 50% at 7.68% 93.06%, rgba(68, 76, 231, 0.162) 0%, rgba(68, 76, 231, 0.058) 100%);
-    }
-    &::before {
-        content: '';
-        border-radius: 50%;
-        position: absolute;
-        width: 677.9px;
-        height: 677.9px;
-        left: 161px;
-        top: 186px;
-        background: linear-gradient(162.74deg, rgba(68, 76, 231, 0.162) 6.6%, rgba(0, 0, 0, 0) 89.1%), radial-gradient(50% 50% at 57.97% 47.2%, rgba(68, 76, 231, 0.405) 0%, rgba(68, 76, 231, 0.145) 100%);
-    }
-
-    &__logo {
-        align-items: center;
-        justify-content: space-between;
-        &__image {
-            object-fit: cover;
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-        &__text {
-            font-family: 'Actor';
-            font-style: normal;
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 30px;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            color: #FFFFFF;
-        }
-    }
-
-    &__slogan {
-        font-family: 'Actor';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 50px;
-        display: flex;
-        align-items: center;
-        font-feature-settings: 'pnum' on, 'lnum' on;
-        color: #FFFFFF;
-        padding: 40px 0px;
-        margin-bottom: 50px;
-    }
-
-    &__list {
-        align-items: flex-start;
-        justify-content: flex-start;
-        &__item {
-            width: 100%;
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 20px;
-            color: #FFFFFF;
-            z-index: 2;
-            &:not(:last-child) {
-                margin-bottom: 30px;
-            }
-        }
-    }
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-delay: 0.3s;
 }
