--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -6,7 +6,7 @@
     background: var(--primary);
     opacity: 0.7;
     position: relative;
-    padding: 20px;
+    padding: 60px;
     &::after {
         content: '';
         border-radius: 50%;
@@ -31,6 +31,8 @@
     &__logo {
         align-items: center;
         justify-content: space-between;
+        margin-bottom: 30px;
+        z-index: 2;
         &__image {
             object-fit: cover;
             width: 30px;
@@ -52,6 +54,9 @@
     }
 
     &__slogan {
+        margin: 0px;
+        padding: 0px;
+        margin-bottom: 100px;
         font-family: 'Actor';
         font-style: normal;
         font-weight: 400;
@@ -61,24 +66,35 @@
         align-items: center;
         font-feature-settings: 'pnum' on, 'lnum' on;
         color: #FFFFFF;
-        padding: 40px 0px;
-        margin-bottom: 50px;
+        z-index: 2;
     }
 
     &__list {
         align-items: flex-start;
         justify-content: flex-start;
+        margin: 0px;
         &__item {
             width: 100%;
-            font-family: 'Roboto';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 24px;
-            line-height: 20px;
-            color: #FFFFFF;
-            z-index: 2;
+            z-index: 999;
             &:not(:last-child) {
                 margin-bottom: 30px;
+            }
+            &__text {
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 24px;
+                line-height: 20px;
+                color: #FFFFFF;
+                z-index: 999;
+            }
+            &__svg {
+                z-index: 999;
+                fill: #FFFFFF;
+                margin-right: 20px;
+                &:hover {
+                    fill: #004DE5;
+                }
             }
         }
     }
