--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,11 +1,13 @@
 .login {
-    width: 100%;
+    width: 50%;
     max-width: 400px;
     min-height: 100vh;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out forwards;
+    animation-delay: 0.3s;
 }
 
 .login__item {
