--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -39,6 +39,7 @@
             height: 30px;
             border-radius: 50%;
             margin-right: 20px;
+            fill: #000000;
         }
         &__text {
             font-family: 'Actor';
