--- a/src/uikit/input-dropdown-item/dropdown-item.pug
+++ b/src/uikit/input-dropdown-item/dropdown-item.pug
@@ -3,7 +3,7 @@ label(for=InputId class=ClassName).input-dropdown__list__item.flex
         img(src=ImgSrc, class=ImgClassName).dropdown-item__image
         span.dropdown-item__text
             !=Nickname
-    <label class="styled-checkbox scale translate style-blue">
+    <label class="styled-checkbox scale translate style-blue input-dropdown__list__item__checkbox">
         <input class="w-auto" id=!{InputId} type="checkbox"/>
         <span class="el">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10.0007 15.1709L19.1931 5.97852L20.6073 7.39273L10.0007 17.9993L3.63672 11.6354L5.05093 10.2212L10.0007 15.1709Z"></path></svg>
