--- a/src/components/new-group/new-group.scss
+++ b/src/components/new-group/new-group.scss
@@ -18,7 +18,8 @@
         font-weight: 400;
         font-size: 24px;
         line-height: 30px;
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
+        margin-bottom: 30px;
     }
 
     &__back-btn {
