--- a/src/uikit/inputdropdown/inputdropdown.scss
+++ b/src/uikit/inputdropdown/inputdropdown.scss
@@ -4,12 +4,12 @@
     justify-content: flex-start;
     width: 100%;
     height: 100vh;
-    max-height: 250px;
+    max-height: 180px;
     background: #131318;
     padding: 10px 0px;
     opacity: 1;
     z-index: 1;
-    overflow-y: auto; // overflow: hidden;
+    overflow-y: auto;
     transition: all 0.3s ease;
 }
 
