--- a/src/components/channelInput/channelInput.pug
+++ b/src/components/channelInput/channelInput.pug
@@ -1,4 +1,4 @@
 .custom-input.flex
     .custom-input__caption 
-        !=Caption
+        =Caption
     input(type="text" placeholder=Placeholder).custom-input__content
