--- a/src/components/profile/profile.pug
+++ b/src/components/profile/profile.pug
@@ -2,9 +2,9 @@
     .profile__top.flex
         != avatar
         .profile__user-description.flex
-            .font-size-1!= nickname
-            .font-size-2!= username
-            .font-size-3!= status
+            .font-size-1= nickname
+            .font-size-2= username
+            .font-size-3= status
 
     .profile__inputs.flex
         .profile__input.flex
