--- a/src/components/ui/dataInputReadOnly/dataInputReadOnly.pug
+++ b/src/components/ui/dataInputReadOnly/dataInputReadOnly.pug
@@ -1,2 +1,2 @@
 .data-input-div
-    input(type!=inputType, placeholder!=inputPlaceholder, value!=value, class!=className readonly).data-input
+    input(type=inputType, placeholder=inputPlaceholder, value=value, class=className readonly).data-input
