--- a/src/components/ui/error-input/error-input.pug
+++ b/src/components/ui/error-input/error-input.pug
@@ -1,2 +1,2 @@
 .error-input-div
-    span(class!= className).error-input.invisible!= message
+    span(class= className).error-input.invisible= message
