--- a/src/uikit/avatar/avatar.pug
+++ b/src/uikit/avatar/avatar.pug
@@ -2,6 +2,6 @@ if Caption
     figure(class=CaptionBlockStyle).flex
         img(class=ClassName, style=style, src=Src, alt=Alt)
         figcaption(class=CaptionStyle)
-            !=Caption
+            =Caption
 else
     img(class=ClassName, style=style, src=Src, alt=Alt)
