--- a/src/uikit/input-dropdown-item/dropdown-item.pug
+++ b/src/uikit/input-dropdown-item/dropdown-item.pug
@@ -2,7 +2,7 @@ label(for=InputId class=ClassName).input-dropdown__list__item.flex
     div.flex.align-items-center
         img(src=ImgSrc, class=ImgClassName).dropdown-item__image
         span.dropdown-item__text
-            !=Nickname
+            =Nickname
     <label class="styled-checkbox scale translate style-blue">
         <input class="w-auto" id=!{InputId} type="checkbox"/>
         <span class="el">
