--- a/src/components/channelInput/channelInput.scss
+++ b/src/components/channelInput/channelInput.scss
@@ -28,7 +28,7 @@
     border: 1px solid #1B262C;
     border-radius: 10px;
     color: #ffffff;
-    font-family: "SF Pro Display";
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
