--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -10,7 +10,7 @@
         justify-content: center;
         align-items: center;
         height: 115px;
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -82,7 +82,7 @@ p {
     background-color: rgba(25, 26, 31, 0.7);
     align-items: center;
     justify-content: center;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -91,7 +91,7 @@ p {
 }
 
 .channel__subscribers {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -106,7 +106,7 @@ p {
 }
 
 .view-chat__header__icons__leave-group {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
