--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -41,7 +41,7 @@
 .login__password__password-recovery {
     margin-right: 29px;
     text-align: right;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
