--- a/src/components/ui/dataInputReadOnly/dataInputReadOnly.scss
+++ b/src/components/ui/dataInputReadOnly/dataInputReadOnly.scss
@@ -6,7 +6,7 @@
   border-radius: 8px;
   border: 0px;
 
-  font-family: 'SF Pro Display';
+  font-family: 'SF Pro Display', sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 14px;
