--- a/src/components/ui/icon/button.scss
+++ b/src/components/ui/icon/button.scss
@@ -50,7 +50,7 @@
 }
 
 .back-btn__text {
-    font-family: 'Actor';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
