--- a/src/components/ui/input/input.scss
+++ b/src/components/ui/input/input.scss
@@ -20,7 +20,7 @@
     outline: none;
     background: #18171D;
     border-radius: 16px;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -47,7 +47,7 @@
     background: #1C1C24;
     border: 1px solid #1B262C;
     border-radius: 10px;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -74,7 +74,7 @@
     outline: none;
     background: #18171D;
     border-radius: 16px;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
