--- a/src/uikit/button/button.scss
+++ b/src/uikit/button/button.scss
@@ -101,7 +101,7 @@
     margin: 0px;
     align-self: center;
     justify-content: center;
-    font-family: "Actor";
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     letter-spacing: 0.08rem;
     font-weight: 400;
