--- a/src/uikit/header/header.scss
+++ b/src/uikit/header/header.scss
@@ -11,7 +11,7 @@
         justify-content: center;
         background-color: #181B23;
         color: #ffffff;
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -25,7 +25,7 @@
         justify-content: center;
         background-color: #181B23;
         color: #ffffff;
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -35,7 +35,7 @@
 
     &__title {
         color: #ffffff;
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 26px;
