--- a/src/uikit/input-dropdown-item/dropdown-item.scss
+++ b/src/uikit/input-dropdown-item/dropdown-item.scss
@@ -36,7 +36,7 @@
 .dropdown-item__text {
     width: 75px;
     height: 25px;
-    font-family: 'Actor', 'sans-serif';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
