--- a/src/uikit/link-item/link-item.scss
+++ b/src/uikit/link-item/link-item.scss
@@ -4,7 +4,7 @@ $link_focus: #3d8aca;
 
 .login-reg-bottom__question {
     text-align: center;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 1.2rem;
