--- a/src/components/channelCreation/channel.scss
+++ b/src/components/channelCreation/channel.scss
@@ -16,7 +16,7 @@
 }
 
 .create-channel__header__back {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -38,7 +38,7 @@
 }
 
 .create-channel__header__text {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -47,7 +47,7 @@
 }
 
 .create-channel__heder__done-btn {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -115,7 +115,7 @@
     border: 1px solid #1B262C;
     border-radius: 10px;
     color: #ffffff;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
