--- a/src/components/message-input/message-input.scss
+++ b/src/components/message-input/message-input.scss
@@ -42,7 +42,7 @@
             outline: none;
             background: #1C1C24;
             border: none;
-            font-family: 'SF Pro Display';
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
