--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -45,7 +45,7 @@
     }
 
     &__body {
-        font-family: 'SF Pro Display';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 1.2em;
