--- a/src/components/new-channel/new-channel.scss
+++ b/src/components/new-channel/new-channel.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         background-color: #181B23;
         color: #ffffff;
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -24,7 +24,7 @@
             margin: 0px;
             align-self: center;
             justify-content: center;
-            font-family: "Actor";
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             letter-spacing: 0.08rem;
             font-weight: 400;
