--- a/src/components/ui/blue-button/blue-button.scss
+++ b/src/components/ui/blue-button/blue-button.scss
@@ -7,7 +7,7 @@ $bot-width: 332px;
     border: 0px;
     border-radius: 6px;
 
-    font-family: "SF Pro Display";
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
