--- a/src/components/ui/chatAvatar/chatAvatar.scss
+++ b/src/components/ui/chatAvatar/chatAvatar.scss
@@ -8,7 +8,7 @@
 }
 
 .header__avatar__username {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
@@ -19,7 +19,7 @@
 
 
 .header__avatar__status {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
