--- a/src/components/ui/header-input/header-input.scss
+++ b/src/components/ui/header-input/header-input.scss
@@ -1,5 +1,5 @@
 .header-input {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
