--- a/src/components/ui/loginReg/bottom/bottom.css
+++ b/src/components/ui/loginReg/bottom/bottom.css
@@ -10,7 +10,7 @@
     border: 0px;
     border-radius: 6px;
 
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -25,7 +25,7 @@
 
 .login-reg-bottom__question {
     text-align: center;
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
