--- a/src/components/ui/white-button/white-button.scss
+++ b/src/components/ui/white-button/white-button.scss
@@ -6,7 +6,7 @@ $bot-width: 180px;
   background: #1C1C24;
   border: 0px;
 
-  font-family: "SF Pro Display";
+  font-family: 'SF Pro Display', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
