--- a/src/index.scss
+++ b/src/index.scss
@@ -234,7 +234,7 @@ section {
 .chat-page {
     width: 100%;
     min-width: 500px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'SF Pro Display', sans-serif;
     font-weight: 400;
     background: #131318;
 }
@@ -379,7 +379,7 @@ main {
 }
 
 .font-size-1 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -390,7 +390,7 @@ main {
 }
 
 .font-size-2 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -401,7 +401,7 @@ main {
 }
 
 .font-size-3 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -411,7 +411,7 @@ main {
 }
 
 .font-size-4 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -420,7 +420,7 @@ main {
 }
 
 .font-size-5 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -429,7 +429,7 @@ main {
 }
 
 .font-size-6 {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
