--- a/src/uikit/avatar/avatar.scss
+++ b/src/uikit/avatar/avatar.scss
@@ -13,7 +13,7 @@
 }
 
 .login-reg__top_welcome {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 36px;
@@ -24,7 +24,7 @@
 }
 
 .login-reg__top_message {
-    font-family: 'SF Pro Display';
+    font-family: 'SF Pro Display', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 36px;
@@ -77,7 +77,7 @@
     }
 
     &__caption {
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -90,7 +90,7 @@
         justify-content: center;
         
         &__username {
-            font-family: 'SF Pro Display';
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
@@ -101,7 +101,7 @@
         }
         
         &__status {
-            font-family: 'SF Pro Display';
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 12px;
@@ -157,7 +157,7 @@
     }
 
     &__caption {
-        font-family: 'Actor';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 24px;
@@ -170,7 +170,7 @@
         justify-content: center;
         
         &__username {
-            font-family: 'SF Pro Display';
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
@@ -181,7 +181,7 @@
         }
         
         &__status {
-            font-family: 'SF Pro Display';
+            font-family: 'SF Pro Display', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 12px;
