--- a/src/uikit/dropdown/dropdown.scss
+++ b/src/uikit/dropdown/dropdown.scss
@@ -33,7 +33,7 @@
         width: 100%;
         border-radius: 10px;
         transition: all 0.3s ease;
-        font-family: 'SF Pro Display';
+        font-family: 'SF Pro Display', sans-serif;
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
